--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #89B8F4;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
