--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .topnav a {
   float: left;
-  color: #89B8F4;
+  color: #f3f3f3;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -18,6 +18,6 @@
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #89B8F4;
   color: white;
 }
