--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-.topnav {
+er.topnav {
   background-color: #333;
   overflow: hidden;
 }
 
 .topnav a {
-  float: left;
+  float: center;
   color: #f3f3f3;
   text-align: center;
   padding: 14px 16px;
