--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-er.topnav {
+topnav {
   background-color: #333;
   overflow: hidden;
 }
 
 .topnav a {
-  float: center;
+  float: left;
   color: #f3f3f3;
   text-align: center;
   padding: 14px 16px;
