--- a/style.css
+++ b/style.css
@@ -1,17 +1,12 @@
-h1 {
-  font-family: "Abril Fatface", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-topnav {
+.topnav {
   background-color: #333;
   overflow: hidden;
 }
 
 .topnav a {
   float: left;
-  color: #f3f3f3;
+  display: block;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -24,6 +19,10 @@ topnav {
 }
 
 .topnav a.active {
-  background-color: #89B8F4;
+  background-color: #04AA6D;
   color: white;
+}
+
+.topnav .icon {
+  display: none;
 }
