--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-
+.left {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 33%; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  padding-top: 20px;
+}
