--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@
   left: 0;
   padding-top: 20px;
 }
+
+.right {
+  margin-left: 33%; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+}
