--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font:"Garamond";
+}
+
 .left {
   height: 100%; /* Full-height: remove this if you want "auto" height */
   width: 33%; /* Set the width of the sidebar */
