--- a/style.css
+++ b/style.css
@@ -3,21 +3,45 @@ body {
   font-family:Garamond;
 }
 
-.left {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 33%; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  padding-top: 20px;
+.topnav {
+  overflow: hidden;
+  background-color: #333;
 }
 
-.right {
-  margin-left: 33%; /* Same as the width of the sidebar */
-  padding: 0px 10px;
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.column {
+  float: left;
+}
+
+.column.side {
+  width: 25%;
+}
+
+.column.middle {
+  width: 50%;
+}
+
+@media screen and (max-width: 600px) {
+  .column.side, .column.middle {
+    width: 100%;
+  }
+}
+
+.footer {
+  background-color: #F1F1F1;
+  text-align: center;
+  padding: 10px;
 }
