--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@ body {
   float: left;
 }
 
-.column.side {
-  width: 25%;
+.column.main {
+  width: 66%;
 }
 
-.column.middle {
-  width: 50%;
+.column.side {
+  width: 33%;
 }
 
 @media screen and (max-width: 600px) {
