--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .header {
-  background-color: #F1F1F1;
+  background-color: #8AB8F4;
+  color: #F1F1F1;
   text-align: center;
   padding: 20px;
 }
