--- a/style.css
+++ b/style.css
@@ -1,35 +1,69 @@
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: Garamond, serif;
-  background-color: #F1F1F1;
-}
-
-.header {
-  background-color: #8AB8F4;
-  color: #F1F1F1;
-  text-align: center;
+  font-family: Garamond;
   padding: 20px;
+  background: #f1f1f1;
 }
 
-.column {
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  font-size: 40px;
+  text-align: center;
+  background: white;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
   float: left;
-}
-
-.column.main {
   width: 75%;
 }
 
-.column.side {
+/* Right column */
+.rightcolumn {
+  float: left;
   width: 25%;
+  padding-left: 20px;
 }
 
-@media screen and (max-width: 600px) {
-  .column.side, .column.middle {
-    width: 100%;
-  }
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
 }
 
+/* Add a card effect for articles */
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
 .footer {
-  background-color: #F1F1F1;
+  padding: 20px;
   text-align: center;
-  padding: 10px;
+  background: #ddd;
+  margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {
+    width: 100%;
+    padding: 0;
+  }
 }
