--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 h2 {
+  color:#8AB8F4;
   text-align:center;
 }
 
@@ -17,7 +18,7 @@ h2 {
   padding: 30px;
   font-size: 28px;
   text-align: center;
-  background: white;
+  background: #8AB8F4;
 }
 
 .leftcolumn {
@@ -38,7 +39,7 @@ h2 {
 }
 
 .card {
-  background-color: white;
+  background-color: #8AB8F4;
   padding: 20px;
   margin-top: 20px;
 }
