--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ h2 {
   text-align:center;
 }
 
+a {
+  color: #8AB8F4;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #8AB8F4;
+  text-decoration: none;
+}
+
 .header {
   padding: 30px;
   font-size: 28px;
