--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ a:visited {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 .header {
   padding: 30px;
   font-size: 28px;
