--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ a:hover {
 }
 
 .header {
-  padding: 30px;
-  font-size: 28px;
+  padding: 60px;
   text-align: center;
-  background: #f1f1f1;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
 }
 
 .leftcolumn {
