--- a/style.css
+++ b/style.css
@@ -1,76 +1,68 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
 
-* {
+html {
   box-sizing: border-box;
 }
 
-body {
-  font-family: Garamond;
-  padding: 20px;
-  background: #8AB8F4;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-h2 {
-  color: #f1f1f1;
-  text-align:center;
-}
-
-a:link, a:visited {
-  color: #8AB8F4;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #8AB8F4;
-  text-decoration: underline;
-}
-
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-  font-size: 30px;
-}
-
-.leftcolumn {
+.column {
   float: left;
-  width: 75%;
-}
-
-.rightcolumn {
-  float: left;
-  width: 25%;
-  padding-left: 20px;
-}
-
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
 }
 
 .card {
-  background-color: #f1f1f1;
-  padding: 20px;
-  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.footer {
-  padding: 20px;
+.about-section {
+  padding: 50px;
   text-align: center;
-  background: #ddd;
-  margin-top: 20px;
+  background-color: #474e5d;
+  color: white;
 }
 
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
+
+@media screen and (max-width: 650px) {
+  .column {
     width: 100%;
-    padding: 0;
+    display: block;
   }
 }
