--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ html {
   margin: 8px;
 }
 
+.h-header {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+
 .p-header {
   padding: 50px;
   text-align: center;
